--- a/p3/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p3/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -8,20 +8,30 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile-->
         <scene sceneID="hxv-1d-b3V">
             <objects>
                 <viewController id="rD9-us-0iR" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1SV-i9-gRE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxa-BL-5vE">
+                                <rect key="frame" x="174" y="434" width="66" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ugB-hk-Od7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="Tem-q2-bED"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RCX-S0-do3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-694" y="613"/>
+            <point key="canvasLocation" x="-694.20289855072474" y="612.72321428571422"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="c3O-bJ-mL5">
@@ -85,6 +95,7 @@
                     <connections>
                         <segue destination="ysI-mC-pPG" kind="relationship" relationship="viewControllers" id="WBL-DZ-37m"/>
                         <segue destination="m6q-JG-Ycj" kind="relationship" relationship="viewControllers" id="FuX-KK-ZJM"/>
+                        <segue destination="rD9-us-0iR" kind="relationship" relationship="viewControllers" id="6OB-68-adG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1u1-YC-e8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -94,6 +105,7 @@
     </scenes>
     <resources>
         <image name="film.fill" catalog="system" width="128" height="93"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
