--- a/p3/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p3/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -23,6 +23,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S5m-HT-i0i">
+                                <rect key="frame" x="0.0" y="512" width="414" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RI4-sk-b3h">
+                                <rect key="frame" x="174" y="703" width="65" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Select"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ugB-hk-Od7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
