--- a/p4/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p4/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -86,28 +86,43 @@
                                 <rect key="frame" x="0.0" y="44" width="390" height="717"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" textLabel="xmF-Kc-sBS" detailTextLabel="t1z-0e-OUe" style="IBUITableViewCellStyleValue1" id="Clh-0g-hDh">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="142" id="Clh-0g-hDh">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="142"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Clh-0g-hDh" id="rZt-Mx-WD6">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="142"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xmF-Kc-sBS">
-                                                    <rect key="frame" x="20" y="15" width="25" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vL6-FX-Rm1">
+                                                    <rect key="frame" x="20" y="11" width="90" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="vL6-FX-Rm1" secondAttribute="height" multiplier="3:4" id="jkP-F8-6XH"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Add-Nq-Z5b">
+                                                    <rect key="frame" x="130" y="11" width="240" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t1z-0e-OUe">
-                                                    <rect key="frame" x="337.33333333333331" y="15" width="32.666666666666664" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXW-EM-Qso">
+                                                    <rect key="frame" x="130" y="52" width="240" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vL6-FX-Rm1" firstAttribute="top" secondItem="rZt-Mx-WD6" secondAttribute="topMargin" id="7B9-0W-deg"/>
+                                                <constraint firstItem="zXW-EM-Qso" firstAttribute="top" secondItem="Add-Nq-Z5b" secondAttribute="bottom" constant="20" id="C2b-JQ-NUM"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Add-Nq-Z5b" secondAttribute="trailing" id="GeK-oT-jgS"/>
+                                                <constraint firstItem="zXW-EM-Qso" firstAttribute="leading" secondItem="vL6-FX-Rm1" secondAttribute="trailing" constant="20" id="Liy-Oh-WAs"/>
+                                                <constraint firstItem="vL6-FX-Rm1" firstAttribute="leading" secondItem="rZt-Mx-WD6" secondAttribute="leadingMargin" id="Rkk-Nn-QH0"/>
+                                                <constraint firstItem="Add-Nq-Z5b" firstAttribute="top" secondItem="rZt-Mx-WD6" secondAttribute="topMargin" id="XOw-lk-dSw"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="zXW-EM-Qso" secondAttribute="trailing" id="g4t-12-5fe"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="vL6-FX-Rm1" secondAttribute="bottom" id="lfn-D5-ShA"/>
+                                                <constraint firstItem="Add-Nq-Z5b" firstAttribute="leading" secondItem="vL6-FX-Rm1" secondAttribute="trailing" constant="20" id="tny-Vv-QEL"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -129,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XQQ-dz-yzT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="197.10144927536234" y="-355.58035714285711"/>
+            <point key="canvasLocation" x="196.92307692307691" y="-356.1611374407583"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9eP-lD-3lj">
