--- a/p4/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p4/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -97,6 +97,7 @@
                                                     <rect key="frame" x="20" y="11" width="90" height="120"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="vL6-FX-Rm1" secondAttribute="height" multiplier="3:4" id="jkP-F8-6XH"/>
+                                                        <constraint firstAttribute="width" constant="90" id="xWs-Ny-5gu"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Add-Nq-Z5b">
