--- a/p5/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p5/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -72,9 +72,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Dj-FV-5Nu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="198" y="252"/>
+            <point key="canvasLocation" x="1126.1538461538462" y="251.65876777251182"/>
         </scene>
-        <!--Movies-->
+        <!--Movies View Controller-->
         <scene sceneID="Zbh-sQ-elT">
             <objects>
                 <viewController id="ysI-mC-pPG" customClass="MoviesViewController" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -83,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gy7-vf-acv">
-                                <rect key="frame" x="0.0" y="44" width="390" height="717"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="142" id="Clh-0g-hDh" customClass="MovieTableViewCell" customModule="MovieApp" customModuleProvider="target">
@@ -143,14 +143,14 @@
                             <constraint firstItem="gy7-vf-acv" firstAttribute="leading" secondItem="6bc-fF-YNy" secondAttribute="leading" id="yNZ-Tr-m87"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Movies" image="film.fill" catalog="system" id="tcm-DF-yJh"/>
+                    <navigationItem key="navigationItem" id="Dyt-Cu-iwW"/>
                     <connections>
                         <outlet property="tableView" destination="gy7-vf-acv" id="qLN-tF-yaT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XQQ-dz-yzT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="196.92307692307691" y="-356.1611374407583"/>
+            <point key="canvasLocation" x="1126.1538461538462" y="-356.1611374407583"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9eP-lD-3lj">
@@ -162,7 +162,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ysI-mC-pPG" kind="relationship" relationship="viewControllers" id="WBL-DZ-37m"/>
+                        <segue destination="8ZC-fx-GFj" kind="relationship" relationship="viewControllers" id="WBL-DZ-37m"/>
                         <segue destination="m6q-JG-Ycj" kind="relationship" relationship="viewControllers" id="FuX-KK-ZJM"/>
                         <segue destination="rD9-us-0iR" kind="relationship" relationship="viewControllers" id="6OB-68-adG"/>
                     </connections>
@@ -170,6 +170,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1u1-YC-e8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-694" y="-53"/>
+        </scene>
+        <!--Movies-->
+        <scene sceneID="jz0-o6-rF4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8ZC-fx-GFj" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Movies" image="film.fill" catalog="system" id="tcm-DF-yJh"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tdG-YQ-Dbr">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ysI-mC-pPG" kind="relationship" relationship="rootViewController" id="bFX-rf-ybW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iIf-zR-mtS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="196.92307692307691" y="-356.1611374407583"/>
         </scene>
     </scenes>
     <resources>
