--- a/p5/MovieApp/MovieApp/Base.lproj/Main.storyboard
+++ b/p5/MovieApp/MovieApp/Base.lproj/Main.storyboard
@@ -129,6 +129,7 @@
                                             <outlet property="movieImageView" destination="vL6-FX-Rm1" id="DqZ-h1-WRf"/>
                                             <outlet property="nameLabel" destination="Add-Nq-Z5b" id="b8c-Zm-zwS"/>
                                             <outlet property="ratingLabel" destination="zXW-EM-Qso" id="2OP-U3-vMe"/>
+                                            <segue destination="KSc-QM-4lQ" kind="show" id="tTT-RJ-D3w"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -151,6 +152,73 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XQQ-dz-yzT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1126.1538461538462" y="-356.1611374407583"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XhJ-k6-mix">
+            <objects>
+                <viewController id="KSc-QM-4lQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kww-89-fQX">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rE8-Br-W53">
+                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wCC-86-ebw">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="611"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="24S-si-Gnx">
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="520"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="24S-si-Gnx" secondAttribute="height" multiplier="3:4" id="cSL-g0-vN7"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bff-3g-6bl">
+                                                <rect key="frame" x="0.0" y="530" width="390" height="20.333333333333371"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLq-nR-RBY">
+                                                <rect key="frame" x="0.0" y="560.33333333333337" width="390" height="20.333333333333371"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxz-bc-gk7">
+                                                <rect key="frame" x="0.0" y="590.66666666666663" width="390" height="20.333333333333371"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="wCC-86-ebw" firstAttribute="leading" secondItem="Geq-we-W8h" secondAttribute="leading" id="AJz-jx-oHB"/>
+                                    <constraint firstItem="wCC-86-ebw" firstAttribute="bottom" secondItem="Geq-we-W8h" secondAttribute="bottom" id="Y2h-AG-q1L"/>
+                                    <constraint firstItem="wCC-86-ebw" firstAttribute="trailing" secondItem="Geq-we-W8h" secondAttribute="trailing" id="gAe-V5-5ie"/>
+                                    <constraint firstItem="Geq-we-W8h" firstAttribute="top" secondItem="wCC-86-ebw" secondAttribute="top" id="s6j-7V-Cm8"/>
+                                    <constraint firstItem="wCC-86-ebw" firstAttribute="width" secondItem="q9p-Wh-wyE" secondAttribute="width" id="sxG-tH-pfQ"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Geq-we-W8h"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="q9p-Wh-wyE"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ybz-vc-Ikr"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rE8-Br-W53" firstAttribute="top" secondItem="Ybz-vc-Ikr" secondAttribute="top" id="28G-P4-1AU"/>
+                            <constraint firstItem="Ybz-vc-Ikr" firstAttribute="bottom" secondItem="rE8-Br-W53" secondAttribute="bottom" id="VbG-rb-PNp"/>
+                            <constraint firstItem="rE8-Br-W53" firstAttribute="leading" secondItem="Ybz-vc-Ikr" secondAttribute="leading" id="Vxm-CN-HO1"/>
+                            <constraint firstItem="Ybz-vc-Ikr" firstAttribute="trailing" secondItem="rE8-Br-W53" secondAttribute="trailing" id="yxz-nT-5O8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Kjz-Vc-q9T"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FbE-JN-8iZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1888" y="-356"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9eP-lD-3lj">
